--- a/requirements.txt
+++ b/requirements.txt
@@ -1,231 +1,3 @@
-absl-py==0.10.0
-alembic==1.4.1
-argcomplete==1.10.0
-argon2-cffi==20.1.0
-asgiref==3.2.3
-astroid==2.3.3
-astunparse==1.6.3
-async-generator==1.10
-atomicwrites==1.4.0
-attrs==20.2.0
-autopep8==1.5.4
-azure-core==1.8.2
-azure-storage-blob==12.5.0
-backcall==0.2.0
-beautifulsoup4==4.8.0
-bleach==3.2.1
-blinker==1.4
-blis==0.4.1
-browserhistory==0.1.2
-cachetools==4.1.1
-captcha==0.3
-catalogue==1.0.0
-catboost==0.24.2
-certifi==2019.11.28
-cffi==1.14.3
-chardet==3.0.4
-click==7.1.1
-cloudpickle==1.6.0
-colorama==0.4.3
-colorlover==0.3.0
-combo==0.1.1
-confuse==1.3.0
-create-package==1.0.2
-cryptography==3.1.1
-cufflinks==0.17.3
-cycler==0.10.0
-cymem==2.0.3
-Cython==0.29.14
-databricks-cli==0.13.0
-datefinder==0.7.1
-decorator==4.4.2
-defusedxml==0.6.0
-Django==2.2.1
-django-widget-tweaks==1.4.5
-docker==4.3.1
-docutils==0.16
-docx2txt==0.8
-EbookLib==0.17.1
-entrypoints==0.3
-extract-msg==0.23.1
-filetype==1.0.7
-Flask==1.1.2
-funcy==1.15
-future==0.18.2
-gast==0.3.3
-gensim==3.8.3
-gitdb==4.0.5
-GitPython==3.1.10
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-gorilla==0.3.0
-graphviz==0.14.2
-grpcio==1.32.0
-gunicorn==20.0.4
-h5py==2.10.0
-htmlmin==0.1.12
-idna==2.8
-ImageHash==4.1.0
-IMAPClient==2.1.0
-imbalanced-learn==0.7.0
-iniconfig==1.1.1
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-isort==4.3.21
-itsdangerous==1.1.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.17.0
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-Keras-Preprocessing==1.1.2
-keyring==21.5.0
-kiwisolver==1.1.0
-kmodes==0.10.2
-lazy-object-proxy==1.4.3
-lightgbm==3.0.0
-llvmlite==0.34.0
-lxml==4.6.1
-Mako==1.1.3
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib==3.1.3
-mccabe==0.6.1
-missingno==0.4.2
-mistune==0.8.4
-mlflow==1.11.0
-mlxtend==0.17.3
-msrest==0.6.19
-murmurhash==1.0.2
-nbclient==0.5.0
-nbconvert==6.0.7
-nbformat==5.0.7
-nest-asyncio==1.4.1
-networkx==2.5
-nltk==3.5
-notebook==6.1.4
-numba==0.51.2
-numexpr==2.7.1
-numpy==1.19.2
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.4.0.46
-opt-einsum==3.3.0
-packaging==20.4
-pandas==1.1.3
-pandas-profiling==2.9.0
-pandas-visual-analysis==0.0.4
-pandocfilters==1.4.2
-parso==0.7.1
-patsy==0.5.1
-pdfminer.six==20181108
-phik==0.10.0
-pickleshare==0.7.5
-Pillow==7.2.0
-pipenv==2018.11.26
-pkginfo==1.6.1
-plac==1.1.3
-plotly==4.11.0
-pluggy==0.13.1
-preshed==3.0.2
-prometheus-client==0.8.0
-prometheus-flask-exporter==0.18.1
-prompt-toolkit==3.0.7
-protobuf==3.13.0
-py==1.9.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycaret==2.1.2
-pycodestyle==2.6.0
-pycparser==2.20
-pycryptodome==3.9.9
-pygame==1.9.6
-Pygments==2.7.1
-pyLDAvis==2.1.2
-pylint==2.4.4
-pyod==0.8.3
-pyparsing==2.4.6
-pyrsistent==0.17.3
-pytesseract==0.3.6
-pytest==6.1.1
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-pptx==0.6.18
-pytz==2019.3
-PyWavelets==1.1.1
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.2
-querystring-parser==1.2.4
-readme-renderer==28.0
-regex==2020.10.23
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-toolbelt==0.9.1
-retrying==1.3.3
-rfc3986==1.4.0
-rsa==4.6
-scikit-learn==0.23.2
-scipy==1.5.3
-seaborn==0.11.0
-selenium==3.141.0
-Send2Trash==1.5.0
-six==1.12.0
-smart-open==3.0.0
-smmap==3.0.4
-sortedcontainers==2.3.0
-soupsieve==2.0.1
-spacy==2.3.2
-SpeechRecognition==3.8.1
-SQLAlchemy==1.3.13
-sqlparse==0.3.0
-srsly==1.0.2
-statsmodels==0.12.0
-suod==0.0.4
-tabulate==0.8.7
-tangled-up-in-unicode==0.0.6
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow-gpu==2.3.1
-tensorflow-gpu-estimator==2.3.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-textblob==0.15.3
-textract==1.6.3
-thinc==7.4.1
-threadpoolctl==2.1.0
-toml==0.10.1
-TOPSIS-Ramandeep2-101803225==0.0.1
-tornado==6.0.4
-tqdm==4.50.2
-traitlets==5.0.4
-twine==3.2.0
-tzlocal==1.5.1
-umap-learn==0.4.6
-urllib3==1.25.8
-vboxapi==1.0
-virtualenv==16.7.9
-virtualenv-clone==0.5.3
-visions==0.5.0
-waitress==1.4.4
-wasabi==0.8.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wordcloud==1.8.0
-wrapt==1.11.2
-xgboost==1.2.1
-xlrd==1.2.0
-XlsxWriter==1.2.7
-yellowbrick==1.2
+flask
+textract
+regex
